choroplethr 3.6.0
----------------------------------------------------------------
-New function tract_choropleth makes choropleths of Census Tracts.
-New function get_tract_demographics gets tract demographics by ACS survey year and span.

choroplethr 3.5.3
----------------------------------------------------------------
-Fix warnings that were introduced by latest version of ggplot2
-Move documentation to my own site

choroplethr 3.5.2
----------------------------------------------------------------
-Move "acs" package from Import to Depends. While I don't think that this should be
necessary, it seems to be the only way to fix a bug I describe here: https://stat.ethz.ch/pipermail/r-package-devel/2016q1/000760.html

choroplethr 3.5.1
----------------------------------------------------------------
-Bug fix: As of ggplot 2.1.0, R6 class variables cannot be assigned to ggplot2 objects
in the class declaration. Doing so will break binary builds. So now assign them
in the constructor instead

choroplethr 3.5.0
----------------------------------------------------------------
-New function admin1_region_choropleth lets you create admin 1 choropleths
based on a list of admin 1 regions. This can span multiple countries and include subset of countries.
-Function get_acs_data now has a parameter include_moe which, if true will
return the 90% margins of error in the data frame.

choroplethr 3.4.0
----------------------------------------------------------------
-Set reference_map=TRUE in admin1_choropleth to overlay the choropleth over
a reference map taken from google maps.
-Add startup messages designed to help users.

choroplethr 3.3.1
----------------------------------------------------------------
-Compatability changes to support building with roxygen2 version 5.0.1.
-Compatability changes to work with ggplot2 version 2.0.0.

choroplethr 3.3.0
----------------------------------------------------------------