@@ -20,11 +20,11 @@ export(country_choropleth)
 export(county_choropleth)
 export(county_choropleth_acs)
 export(county_zoom_choropleth)
+export(double_map)
 export(get_acs_data)
 export(get_acs_df)
 export(get_county_demographics)
 export(get_state_demographics)
-export(get_tract_acs_data)
 export(get_tract_demographics)
 export(get_tract_map)
 export(state_choropleth)
@@ -66,6 +66,7 @@ importFrom(ggplot2,theme)
 importFrom(ggplot2,theme_grey)
 importFrom(grid,grobTree)
 importFrom(grid,unit)
+importFrom(gridExtra,grid.arrange)
 importFrom(scales,comma)
 importFrom(stringr,fixed)
 importFrom(stringr,str_extract_all)
