@@ -4,10 +4,13 @@
 \alias{get_tract_demographics}
 \title{Get a handful of demographic variables on Census Tracts in a State from the US Census Bureau as a data.frame.}
 \usage{
-get_tract_demographics(state_name, endyear = 2013, span = 5)
+get_tract_demographics(state_name, county_fips = NULL, endyear = 2013,
+  span = 5)
 }
 \arguments{
 \item{state_name}{The name of the state. See ?state.regions for proper spelling and capitalization.}
+
+\item{county_fips}{An optional vector of county fips codes within the state. Useful to set because getting data on all tracts can be slow.}
 
 \item{endyear}{The end year for the survey}
 
